<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="Current Tasks"/>
        <item

            android:id="@+id/nav_task_summary"
            android:icon="@drawable/ic_pie_chart_black_24dp"
            android:title="Task Summary"/>

        <item

            android:id="@+id/nav_task_history"
            android:icon="@drawable/icon_history"
            android:title="Task History"/>

        <item

                android:id="@+id/nav_return_task"
                android:icon="@drawable/ic_refresh_white_24dp"
                android:title="Return Tasks"/>
        <item
                android:id="@+id/nav_call_operator"
                android:icon="@drawable/ic_phone_in_talk_white_24dp"
                android:title="Call Operator"/>

        <item
            android:id="@+id/nav_notifications"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_title_notifications"/>

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/icon_money"
            android:title="@string/nav_payment"/>
        <item
            android:id="@+id/nav_transaction_registration"
            android:icon="@drawable/icon_currency_bill"
            android:title="@string/nav_transaction_registration"/>

        <item

            android:id="@+id/nav_transaction_history"
            android:icon="@drawable/icon_transaction_history"
            android:title="@string/nav_transaction_history"/>

        <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/outline_chat_24"
                android:title="@string/btm_nav_title_chat"/>

        <item android:title="Profile">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_change_password"
                        android:icon="@drawable/ic_lock_white_24dp"
                        android:title="Change Password"/>

                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_logout_black_24dp"
                        android:title="Logout"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_item_none"
            android:title=""
            android:enabled="false"/>

        <item
            android:id="@+id/nav_item_app_version"
            android:name="android:itemTextAppearance"
            android:title="APP VERSION"
            android:enabled="false">
        </item>

        <item
            android:id="@+id/nav_item_api_version"
            android:name="android:itemTextAppearance"
            android:title="API VERSION"
            android:enabled="false">
        </item>

    </group>

</menu>
