<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.splash.SplashActivity" android:id="@+id/root_view_splash_activity"
    android:background="@drawable/splash_bg">

    <TextView
        android:text="@string/banner_splash_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_banner_init_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.52" android:textStyle="bold"/>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
        android:progressTint="#2676CE"/>
    <TextView
        android:text="@string/login_subtitle_secure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_banner_footer_secure_activity_splash" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_banner_init_activity" android:textColor="#CCCCCC"
        app:layout_constraintHorizontal_bias="0.49"/>
    <TextView
        android:text="@string/login_subtitle_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_banner_footer_dot1_activity_splash"
        app:layout_constraintEnd_toStartOf="@+id/text_banner_footer_secure_activity_splash"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@+id/text_banner_footer_secure_activity_splash"
        app:layout_constraintBottom_toBottomOf="@+id/text_banner_footer_secure_activity_splash"
        android:textColor="#CCCCCC" app:layout_constraintVertical_bias="0.55"
        android:layout_marginTop="2dp"/>
    <TextView
        android:text="@string/login_subtitle_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_banner_footer_dot2_activity_splash"
        app:layout_constraintTop_toTopOf="@+id/text_banner_footer_secure_activity_splash"
        app:layout_constraintBottom_toBottomOf="@+id/text_banner_footer_secure_activity_splash"
        android:textColor="#CCCCCC"
        app:layout_constraintStart_toEndOf="@+id/text_banner_footer_secure_activity_splash"
        android:layout_marginStart="4dp" android:layout_marginTop="2dp"/>
    <TextView
        android:text="@string/login_subtitle_stable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_banner_footer_stable_activity_splash"
        app:layout_constraintEnd_toStartOf="@+id/text_banner_footer_dot1_activity_splash"
        android:layout_marginEnd="4dp" android:textColor="#CCCCCC"
        app:layout_constraintTop_toTopOf="@+id/text_banner_footer_secure_activity_splash"
        app:layout_constraintBottom_toBottomOf="@+id/text_banner_footer_secure_activity_splash"/>
    <TextView
        android:text="@string/login_subtitle_speedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/text_banner_footer_dot2_activity_splash"
        android:layout_marginStart="4dp"
        android:textColor="#CCCCCC"
        app:layout_constraintTop_toTopOf="@+id/text_banner_footer_secure_activity_splash"
        app:layout_constraintBottom_toBottomOf="@+id/text_banner_footer_secure_activity_splash"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/LOGOUT_TEXT"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/load_data_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        android:textSize="16sp"
        android:text="@string/load_more_data"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>