<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/task_list_circle"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_gravity="left"
            android:background="#2079E5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_task_list_order_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/place_holder_task_id"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/task_list_circle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_list_text_taskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/place_holder_task_status"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text_task_list_order_no"
            app:layout_constraintTop_toBottomOf="@+id/text_task_list_order_no" />

        <TextView
            android:id="@+id/task_list_text_label_expectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/end_date_label"
            android:textColor="#999999"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/task_list_text_taskStatus"
            app:layout_constraintTop_toBottomOf="@+id/task_list_text_taskStatus" />

        <TextView
            android:id="@+id/task_list_text_expectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/expected_delivery"
            android:textColor="#AFADAD"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/task_list_text_label_expectedDate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/task_list_text_label_expectedDate"
            app:layout_constraintTop_toBottomOf="@+id/task_list_text_label_expectedDate" />

        <TextView
            android:id="@+id/task_list_text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="282dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/place_holder_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/task_list_text_expectedDate"
            app:layout_constraintTop_toBottomOf="@+id/task_list_text_expectedDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>




