<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvOrderItem"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textSize="11dp"
        android:gravity="start|center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="match_parent"
        android:text="@string/str_item_name"
        android:layout_marginLeft="4dp"
        app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/str_quantity"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="11dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/tvWeight"
        app:layout_constraintStart_toEndOf="@+id/tvOrderItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/str_weight_kg"
        android:gravity="end|center"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        android:textSize="11dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvQuantity"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/firstDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:background="@color/black_overlay"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight"

        />
</androidx.constraintlayout.widget.ConstraintLayout>